kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zeppelin-feedback-portal
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: zeppelin-feedback-portal
  template:
    metadata:
      labels:
        app: zeppelin-feedback-portal
    spec:
      containers:
      - name: app
        image: ghcr.io/zeppelinbot/zeppelin-feedback-portal-app:latest
        ports:
        - containerPort: 3000
