kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: zeppelin-feedback-portal
spec:
  ports:
  - port: 3000
    targetPort: 3000
  selector:
    app: zeppelin-feedback-portal
